<resources>
    <string name="app_name">Travedetail</string>
    <string name="title_toolbar">ท่องเที่ยวตาก</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Name">ชื่อ</string>
    <string name="Surname">นามสกุล</string>
    <string name="Male">ชาย</string>
    <string name="Female">หญิง</string>
    <string name="Age">อายุ</string>
    <string name="Travel">เที่ยว</string>
    <string name="name_sur">Panupong Chanthothai</string>
    <string name="School">Infomation Technology</string>
    <string name="title_activity_maps">Map</string>

</resources>
